# pkg/parking.pb.validate.go
@@ -35,44 +35,44 @@ var (
 	_ = sort.Sort
 )
 
-// Validate checks the field values on GetUserByPhoneRequest with the rules
+// Validate checks the field values on GetUserByIDRequest with the rules
 // defined in the proto definition for this message. If any rules are
 // violated, the first error encountered is returned, or nil if there are no violations.
-func (m *GetUserByPhoneRequest) Validate() error {
+func (m *GetUserByIDRequest) Validate() error {
 	return m.validate(false)
 }
 
-// ValidateAll checks the field values on GetUserByPhoneRequest with the rules
+// ValidateAll checks the field values on GetUserByIDRequest with the rules
 // defined in the proto definition for this message. If any rules are
 // violated, the result is a list of violation errors wrapped in
-// GetUserByPhoneRequestMultiError, or nil if none found.
-func (m *GetUserByPhoneRequest) ValidateAll() error {
+// GetUserByIDRequestMultiError, or nil if none found.
+func (m *GetUserByIDRequest) ValidateAll() error {
 	return m.validate(true)
 }
 
-func (m *GetUserByPhoneRequest) validate(all bool) error {
+func (m *GetUserByIDRequest) validate(all bool) error {
 	if m == nil {
 		return nil
 	}
 
 	var errors []error
 
-	// no validation rules for PhoneNumber
+	// no validation rules for UserId
 
 	if len(errors) > 0 {
-		return GetUserByPhoneRequestMultiError(errors)
+		return GetUserByIDRequestMultiError(errors)
 	}
 
 	return nil
 }
 
-// GetUserByPhoneRequestMultiError is an error wrapping multiple validation
-// errors returned by GetUserByPhoneRequest.ValidateAll() if the designated
-// constraints aren't met.
-type GetUserByPhoneRequestMultiError []error
+// GetUserByIDRequestMultiError is an error wrapping multiple validation errors
+// returned by GetUserByIDRequest.ValidateAll() if the designated constraints
+// aren't met.
+type GetUserByIDRequestMultiError []error
 
 // Error returns a concatenation of all the error messages it wraps.
-func (m GetUserByPhoneRequestMultiError) Error() string {
+func (m GetUserByIDRequestMultiError) Error() string {
 	msgs := make([]string, 0, len(m))
 	for _, err := range m {
 		msgs = append(msgs, err.Error())
@@ -81,11 +81,11 @@ func (m GetUserByPhoneRequestMultiError) Error() string {
 }
 
 // AllErrors returns a list of validation violation errors.
-func (m GetUserByPhoneRequestMultiError) AllErrors() []error { return m }
+func (m GetUserByIDRequestMultiError) AllErrors() []error { return m }
 
-// GetUserByPhoneRequestValidationError is the validation error returned by
-// GetUserByPhoneRequest.Validate if the designated constraints aren't met.
-type GetUserByPhoneRequestValidationError struct {
+// GetUserByIDRequestValidationError is the validation error returned by
+// GetUserByIDRequest.Validate if the designated constraints aren't met.
+type GetUserByIDRequestValidationError struct {
 	field  string
 	reason string
 	cause  error
@@ -93,24 +93,24 @@ type GetUserByPhoneRequestValidationError struct {
 }
 
 // Field function returns field value.
-func (e GetUserByPhoneRequestValidationError) Field() string { return e.field }
+func (e GetUserByIDRequestValidationError) Field() string { return e.field }
 
 // Reason function returns reason value.
-func (e GetUserByPhoneRequestValidationError) Reason() string { return e.reason }
+func (e GetUserByIDRequestValidationError) Reason() string { return e.reason }
 
 // Cause function returns cause value.
-func (e GetUserByPhoneRequestValidationError) Cause() error { return e.cause }
+func (e GetUserByIDRequestValidationError) Cause() error { return e.cause }
 
 // Key function returns key value.
-func (e GetUserByPhoneRequestValidationError) Key() bool { return e.key }
+func (e GetUserByIDRequestValidationError) Key() bool { return e.key }
 
 // ErrorName returns error name.
-func (e GetUserByPhoneRequestValidationError) ErrorName() string {
-	return "GetUserByPhoneRequestValidationError"
+func (e GetUserByIDRequestValidationError) ErrorName() string {
+	return "GetUserByIDRequestValidationError"
 }
 
 // Error satisfies the builtin error interface
-func (e GetUserByPhoneRequestValidationError) Error() string {
+func (e GetUserByIDRequestValidationError) Error() string {
 	cause := ""
 	if e.cause != nil {
 		cause = fmt.Sprintf(" | caused by: %v", e.cause)
@@ -122,14 +122,14 @@ func (e GetUserByPhoneRequestValidationError) Error() string {
 	}
 
 	return fmt.Sprintf(
-		"invalid %sGetUserByPhoneRequest.%s: %s%s",
+		"invalid %sGetUserByIDRequest.%s: %s%s",
 		key,
 		e.field,
 		e.reason,
 		cause)
 }
 
-var _ error = GetUserByPhoneRequestValidationError{}
+var _ error = GetUserByIDRequestValidationError{}
 
 var _ interface {
 	Field() string
@@ -137,24 +137,24 @@ var _ interface {
 	Key() bool
 	Cause() error
 	ErrorName() string
-} = GetUserByPhoneRequestValidationError{}
+} = GetUserByIDRequestValidationError{}
 
-// Validate checks the field values on GetUserByPhoneResponse with the rules
+// Validate checks the field values on GetUserByIDResponse with the rules
 // defined in the proto definition for this message. If any rules are
 // violated, the first error encountered is returned, or nil if there are no violations.
-func (m *GetUserByPhoneResponse) Validate() error {
+func (m *GetUserByIDResponse) Validate() error {
 	return m.validate(false)
 }
 
-// ValidateAll checks the field values on GetUserByPhoneResponse with the rules
+// ValidateAll checks the field values on GetUserByIDResponse with the rules
 // defined in the proto definition for this message. If any rules are
 // violated, the result is a list of violation errors wrapped in
-// GetUserByPhoneResponseMultiError, or nil if none found.
-func (m *GetUserByPhoneResponse) ValidateAll() error {
+// GetUserByIDResponseMultiError, or nil if none found.
+func (m *GetUserByIDResponse) ValidateAll() error {
 	return m.validate(true)
 }
 
-func (m *GetUserByPhoneResponse) validate(all bool) error {
+func (m *GetUserByIDResponse) validate(all bool) error {
 	if m == nil {
 		return nil
 	}
@@ -165,7 +165,7 @@ func (m *GetUserByPhoneResponse) validate(all bool) error {
 		switch v := interface{}(m.GetUser()).(type) {
 		case interface{ ValidateAll() error }:
 			if err := v.ValidateAll(); err != nil {
-				errors = append(errors, GetUserByPhoneResponseValidationError{
+				errors = append(errors, GetUserByIDResponseValidationError{
 					field:  "User",
 					reason: "embedded message failed validation",
 					cause:  err,
@@ -173,7 +173,7 @@ func (m *GetUserByPhoneResponse) validate(all bool) error {
 			}
 		case interface{ Validate() error }:
 			if err := v.Validate(); err != nil {
-				errors = append(errors, GetUserByPhoneResponseValidationError{
+				errors = append(errors, GetUserByIDResponseValidationError{
 					field:  "User",
 					reason: "embedded message failed validation",
 					cause:  err,
@@ -182,7 +182,7 @@ func (m *GetUserByPhoneResponse) validate(all bool) error {
 		}
 	} else if v, ok := interface{}(m.GetUser()).(interface{ Validate() error }); ok {
 		if err := v.Validate(); err != nil {
-			return GetUserByPhoneResponseValidationError{
+			return GetUserByIDResponseValidationError{
 				field:  "User",
 				reason: "embedded message failed validation",
 				cause:  err,
@@ -191,19 +191,19 @@ func (m *GetUserByPhoneResponse) validate(all bool) error {
 	}
 
 	if len(errors) > 0 {
-		return GetUserByPhoneResponseMultiError(errors)
+		return GetUserByIDResponseMultiError(errors)
 	}
 
 	return nil
 }
 
-// GetUserByPhoneResponseMultiError is an error wrapping multiple validation
-// errors returned by GetUserByPhoneResponse.ValidateAll() if the designated
+// GetUserByIDResponseMultiError is an error wrapping multiple validation
+// errors returned by GetUserByIDResponse.ValidateAll() if the designated
 // constraints aren't met.
-type GetUserByPhoneResponseMultiError []error
+type GetUserByIDResponseMultiError []error
 
 // Error returns a concatenation of all the error messages it wraps.
-func (m GetUserByPhoneResponseMultiError) Error() string {
+func (m GetUserByIDResponseMultiError) Error() string {
 	msgs := make([]string, 0, len(m))
 	for _, err := range m {
 		msgs = append(msgs, err.Error())
@@ -212,11 +212,11 @@ func (m GetUserByPhoneResponseMultiError) Error() string {
 }
 
 // AllErrors returns a list of validation violation errors.
-func (m GetUserByPhoneResponseMultiError) AllErrors() []error { return m }
+func (m GetUserByIDResponseMultiError) AllErrors() []error { return m }
 
-// GetUserByPhoneResponseValidationError is the validation error returned by
-// GetUserByPhoneResponse.Validate if the designated constraints aren't met.
-type GetUserByPhoneResponseValidationError struct {
+// GetUserByIDResponseValidationError is the validation error returned by
+// GetUserByIDResponse.Validate if the designated constraints aren't met.
+type GetUserByIDResponseValidationError struct {
 	field  string
 	reason string
 	cause  error
@@ -224,24 +224,24 @@ type GetUserByPhoneResponseValidationError struct {
 }
 
 // Field function returns field value.
-func (e GetUserByPhoneResponseValidationError) Field() string { return e.field }
+func (e GetUserByIDResponseValidationError) Field() string { return e.field }
 
 // Reason function returns reason value.
-func (e GetUserByPhoneResponseValidationError) Reason() string { return e.reason }
+func (e GetUserByIDResponseValidationError) Reason() string { return e.reason }
 
 // Cause function returns cause value.
-func (e GetUserByPhoneResponseValidationError) Cause() error { return e.cause }
+func (e GetUserByIDResponseValidationError) Cause() error { return e.cause }
 
 // Key function returns key value.
-func (e GetUserByPhoneResponseValidationError) Key() bool { return e.key }
+func (e GetUserByIDResponseValidationError) Key() bool { return e.key }
 
 // ErrorName returns error name.
-func (e GetUserByPhoneResponseValidationError) ErrorName() string {
-	return "GetUserByPhoneResponseValidationError"
+func (e GetUserByIDResponseValidationError) ErrorName() string {
+	return "GetUserByIDResponseValidationError"
 }
 
 // Error satisfies the builtin error interface
-func (e GetUserByPhoneResponseValidationError) Error() string {
+func (e GetUserByIDResponseValidationError) Error() string {
 	cause := ""
 	if e.cause != nil {
 		cause = fmt.Sprintf(" | caused by: %v", e.cause)
@@ -253,14 +253,14 @@ func (e GetUserByPhoneResponseValidationError) Error() string {
 	}
 
 	return fmt.Sprintf(
-		"invalid %sGetUserByPhoneResponse.%s: %s%s",
+		"invalid %sGetUserByIDResponse.%s: %s%s",
 		key,
 		e.field,
 		e.reason,
 		cause)
 }
 
-var _ error = GetUserByPhoneResponseValidationError{}
+var _ error = GetUserByIDResponseValidationError{}
 
 var _ interface {
 	Field() string
@@ -268,7 +268,7 @@ var _ interface {
 	Key() bool
 	Cause() error
 	ErrorName() string
-} = GetUserByPhoneResponseValidationError{}
+} = GetUserByIDResponseValidationError{}
 
 // Validate checks the field values on RegisterRequest with the rules defined
 // in the proto definition for this message. If any rules are violated, the
